# neural-network

./: LICENSE  README  README.md
AI/: CMakeLists.txt
AI/ANN/: Activation.h  CMakeLists.txt  CostFunction.h  Main.cpp  NetworkConfiguration.h  NeuralNetwork.cpp  NeuralNetwork.h  TrainingAlgorithms.h
AI/TWEANN/: Axon.h  CMakeLists.txt  Neuron.h
AI/TWEANN/graphs/: GraphDataTypes.h
AI/test/: CMakeLists.txt  boolean.cpp  boolean2.cpp
AI/test2/: Boolean.cpp  CMakeLists.txt  FFNetSetup.cpp  MultiLayer.cpp  RandomInputs.cpp  setup.cpp
AI/testANN/: Boolean2.cpp  CMakeLists.txt  FFNetSetup.cpp  MultiLayer.cpp  setup.cpp
AI/testTWEANN/: basic_verification.cpp  dfs.cpp
AI/utilities/: CMakeLists.txt  Debug.h  Distance.h  Printer.h  RandomGenerator.h  TypeConversions.h
