cmake_minimum_required(VERSION 2.8)

set(setup setup.cpp)
set(FFNetSetup FFNetSetup.cpp)
set(Boolean Boolean.cpp)
set(Boolean2 Boolean2.cpp)
set(RandomInputs RandomInputs.cpp)
#add_executable(setup ${setup})
#add_executable(FFNetSetup ${FFNetSetup})
#add_executable(Boolean ${Boolean})
#add_executable(Boolean2 ${Boolean2})
add_executable(RandomInputs ${RandomInputs})
#target_link_libraries(RandomInputs NeuralNetwork)
